@@ -71,6 +71,10 @@ log_level=warn
 # Timeout in seconds given to ConnectTimeout parameter of ssh
 ssh_connect_timeout=30
 
+# Maximum number of simultaneous remote ssh commands (default is
+# ClusterShell default fanout).
+#ssh_fanout=64
+
 # Default timeout in seconds for any operations
 default_timeout=30
 
@@ -91,5 +95,4 @@ status_timeout=10
 
 # Timeout in s for applying tuning parameters on I/O nodes
 set_tuning_timeout=60
-
 
